--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -33,7 +33,7 @@
       # if you have multiple kafka nodes you need to set unique kafka_node_id for each node
       kafka_heap_size: 2G
       kafka_topics:
-        - name: ingest
+        - name: "{{ logscale_kafka_topic_prefix }}-ingest"
           replication_factor: 2
           partitions: 480
           config:
@@ -42,7 +42,7 @@
             retention_bytes: -1
             cleanup_policy: "delete"
             compression_type: producer
-        - name: global
+        - name: "{{ logscale_kafka_topic_prefix }}-global"
           replication_factor: 2
           partitions: 1
           config:
@@ -51,7 +51,7 @@
             retention_ms: -1
             cleanup_policy: "delete"
             compression_type: producer
-        - name: transientChatter
+        - name: "{{ logscale_kafka_topic_prefix }}-transientChatter"
           replication_factor: 2
           partitions: 10
           config:
