--- a/inventory/pslab.yml
+++ b/inventory/pslab.yml
@@ -49,3 +49,4 @@ all:
         kafka_install_dependencies: false
         kafka_scala_version: 2.13
         kafka_version: 3.9.0
+        kafka_heap_size: 2G
