--- a/inventory/pslab.yml
+++ b/inventory/pslab.yml
@@ -50,3 +50,14 @@ all:
         kafka_scala_version: 2.13
         kafka_version: 3.9.0
         kafka_heap_size: 2G
+        kafka_opts:
+        - -XX:NewSize=256m
+        - "-Xms{{ kafka_heap_size }}"
+        - -XX:MetaspaceSize=96m
+        - -XX:+UseG1GC
+        - -XX:MaxGCPauseMillis=20
+        - -XX:InitiatingHeapOccupancyPercent=35
+        - -XX:G1HeapRegionSize=16M
+        - -XX:MinMetaspaceFreeRatio=50
+        - -XX:MaxMetaspaceFreeRatio=80
+        - -XX:+ExplicitGCInvokesConcurrent
