--- a/inventory/pslab.yml
+++ b/inventory/pslab.yml
@@ -49,10 +49,9 @@ all:
         kafka_install_dependencies: false
         kafka_scala_version: 2.13
         kafka_version: 3.9.0
-        kafka_heap_size: 2G
+        kafka_heap_size: 2G #note sets -Xmx and -Xms
         kafka_opts:
         - -XX:NewSize=256m
-        - "-Xms{{ kafka_heap_size }}"
         - -XX:MetaspaceSize=96m
         - -XX:+UseG1GC
         - -XX:MaxGCPauseMillis=20
