--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -15,9 +15,10 @@
       tags:
         - openjdk
     - name: Install the zulu-17 rpm from a remote repo
-      notify: Restart Kafka
+      notify: 
+        - ansible-role-kafka:Restart Kafka
       ansible.builtin.dnf:
-        name: zulu17-jdk-headless-17.0.13-1
+        name: zulu17-jdk-headless-17.0.12-1
         state: present
       tags:
         - openjdk
