--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -20,6 +20,8 @@
       ansible.builtin.dnf:
         name: zulu17-jdk-headless-17.0.13-1
         state: present
+        allow_downgrade: true
+        update_cache: true
       tags:
         - openjdk
     - name: Add another bin dir to system-wide $PATH.
