--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -16,7 +16,7 @@
         - openjdk
     - name: Install the zulu-17 rpm from a remote repo
       notify:
-        - ansible-role-kafka:Restart Kafka
+        - Restart Kafka
       ansible.builtin.dnf:
         name: zulu17-jdk-headless-17.0.13-1
         state: present
