--- a/playbooks/kafka-deploy.yml
+++ b/playbooks/kafka-deploy.yml
@@ -14,16 +14,16 @@
         state: present
       tags:
         - openjdk
-    - name: Install the zulu-17 rpm from a remote repo
-      notify:
-        - Restart Kafka
-      ansible.builtin.dnf:
-        name: zulu17-jdk-headless-17.0.13-1
-        state: present
-        allow_downgrade: true
-        update_cache: true
-      tags:
-        - openjdk
+    # - name: Install the zulu-17 rpm from a remote repo
+    #   notify:
+    #     - Restart Kafka
+    #   ansible.builtin.dnf:
+    #     name: zulu17-jdk-headless-17.0.13-1
+    #     state: present
+    #     allow_downgrade: true
+    #     update_cache: true
+    #   tags:
+    #     - openjdk
     - name: Add another bin dir to system-wide $PATH.
       ansible.builtin.copy:
         owner: root
