--- a/requirements.yml
+++ b/requirements.yml
@@ -3,3 +3,4 @@ collections:
   - name: containers.podman
 roles:
   - src: git+https://github.com/logscale-contrib/ansible-role-kafka.git
+  - src: git+https://github.com/logscale-contrib/ansible-role-logscale.git
