--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,7 @@
 ---
 collections:
   - name: containers.podman
+  - name: community.general
 roles:
   - src: git+https://github.com/logscale-contrib/ansible-role-kafka.git
   - src: git+https://github.com/logscale-contrib/ansible-role-logscale.git
