--- a/playbooks/ospatch.yml
+++ b/playbooks/ospatch.yml
@@ -13,7 +13,7 @@
       cmd: "needs-restarting -r -s"
     register: needs_restarting
     changed_when: needs_restarting.rc == 1
-    failed_when: needs_restarting.rc == 0
+    failed_when: needs_restarting.rc > 1
   - name: Do reboot if needed
     ansible.builtin.reboot:
     when: needs_restarting.rc == 1
