--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,8 @@
 collections:
   - name: containers.podman
   - name: community.general
+  - name: ansible.posix
+    version: 1.6.2
 roles:
   - src: git+https://github.com/logscale-contrib/ansible-role-kafka.git
   - src: git+https://github.com/logscale-contrib/ansible-role-logscale.git
