--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -2,7 +2,7 @@
 - name: Load Balancer
   hosts: lb
   roles:
-    - role: ansible-role-nginx
+    - role: nginxinc.nginx
       nginx_service_modify: true
       nginx_service_timeout: 95
       nginx_logrotate_conf_enable: true
