--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -28,12 +28,14 @@
             upstreams:
               - name: logscale
                 least_conn: true
-                servers:
-{% for v in groups["logscaleAllInOne"] %}
-{{ hostvars[v].ansible_host }}:{{ logscale_kafka_port }}
-{% endfor %}
-                  - address: 0.0.0.0:8080
-                  - address: 0.0.0.0:808 
+                servers: >
+                  [ {% for v in groups["logscaleAllInOne"] %}
+                    {
+                      'address':'{{ hostvars[v].ansible_host }}:{{ logscale_port }}'
+                    }
+                    {% if not loop.last %},{% endif %}
+                    {% endfor %}
+                  ]
             servers:
               - core:
                   listen:
@@ -46,80 +48,8 @@
                 locations:
                   - location: /
                     proxy:
-                      pass: http://upstr/
+                      pass: http://logscale/
                       set_header:
                         field: Host
                         value: $host
-              - core:
-                  listen:
-                    - port: 8081
-                  server_name: localhost
-                log:
-                  access:
-                    - path: /var/log/nginx/access.log
-                      format: main
-                locations:
-                  - location: /
-                    core:
-                      root: /usr/share/nginx/html
-                      index: server_one.html
-                sub_filter:
-                  sub_filters:
-                    - string: server_hostname
-                      replacement: $hostname
-                    - string: server_address
-                      replacement: $server_addr:$server_port
-                    - string: server_url
-                      replacement: $request_uri
-                    - string: remote_addr
-                      replacement: '$remote_addr:$remote_port'
-                    - string: server_date
-                      replacement: $time_local
-                    - string: client_browser
-                      replacement: $http_user_agent
-                    - string: request_id
-                      replacement: $request_id
-                    - string: nginx_version
-                      replacement: $nginx_version
-                    - string: document_root
-                      replacement: $document_root
-                    - string: proxied_for_ip
-                      replacement: $http_x_forwarded_for
-                  once: false
-              - core:
-                  listen:
-                    - port: 8082
-                  server_name: localhost
-                log:
-                  access:
-                    - path: /var/log/nginx/access.log
-                      format: main
-                locations:
-                  - location: /
-                    core:
-                      root: /usr/share/nginx/html
-                      index: server_two.html
-                sub_filter:
-                  sub_filters:
-                    - string: server_hostname
-                      replacement: $hostname
-                    - string: server_address
-                      replacement: $server_addr:$server_port
-                    - string: server_url
-                      replacement: $request_uri
-                    - string: remote_addr
-                      replacement: '$remote_addr:$remote_port'
-                    - string: server_date
-                      replacement: $time_local
-                    - string: client_browser
-                      replacement: $http_user_agent
-                    - string: request_id
-                      replacement: $request_id
-                    - string: nginx_version
-                      replacement: $nginx_version
-                    - string: document_root
-                      replacement: $document_root
-                    - string: proxied_for_ip
-                      replacement: $http_x_forwarded_for
-                  once: false
-
+           
