--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -32,7 +32,11 @@
                   keys_zone: cache:10m
                   inactive: 60m
                   max_size: 100m
-                
+                - path: /var/cache/nginx
+                  levels: 1:2
+                  keys_zone: cache:10m
+                  inactive: 60m
+                  max_size: 100m                
             upstreams:
               - name: logscale
                 least_conn: true
