--- a/requirements.yml
+++ b/requirements.yml
@@ -7,5 +7,5 @@ roles:
   - src: git+https://github.com/logscale-contrib/ansible-role-kafka.git
   - src: git+https://github.com/logscale-contrib/ansible-role-logscale.git
   - name: nginxinc.nginx_config
-  - name: nginxinc.nginx
+  - name: git+https://github.com/logscale-contrib/ansible-role-logscale.git
   
