--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -18,7 +18,7 @@
           - notifempty
           - sharedscripts
           - postrotate
-    - role: ansible-role-nginx
+    - role: ansible-role-nginx-config
       nginx_config_debug_output: true
       nginx_config_http_template_enable: true
       nginx_config_http_template:
