--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -52,7 +52,7 @@
                 servers: >
                   [ {% for v in groups["logscaleAllInOne"] %}
                     {
-                      'address':'{{ hostvars[v].ansible_host }}:{{ logscale_port }}'
+                      'address':'{{ hostvars[v].ansible_host }}:{{ logscale_port | default 8080 }}'
                     }
                     {% if not loop.last %},{% endif %}
                     {% endfor %}
