--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -49,7 +49,13 @@
                   - location: /
                     proxy:
                       pass: http://logscale/
+                      http_version: 1.1
                       set_header:
-                        field: Host
-                        value: $host
-           
+                        - field: X-Forwarded-Proto
+                          value: $scheme
+                        - field: X-Forwarded-For
+                          value: $proxy_add_x_forwarded_for
+                        - field: X-Real-IP
+                          value: $remote_addr
+                        - field: Host
+                          value: $host
