--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -20,6 +20,7 @@
           - sharedscripts
           - postrotate
     - role: ansible-role-nginx-config
+      nginx_config_selinux: true
       nginx_config_debug_output: true
       nginx_config_http_template_enable: true
       nginx_config_http_template:
