--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Load Balancer
-  hosts: lb
+  hosts: logscaleLB
   become: true
   roles:
     - role: nginxinc.nginx
@@ -25,7 +25,7 @@
       nginx_config_http_template_enable: true
       nginx_config_http_template:
         - template_file: http/default.conf.j2
-          deployment_location: /etc/nginx/conf.d/default.conf
+          deployment_location: /etc/nginx/conf.d/logscale.conf
           config:
             upstreams:
               - name: logscale
