--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -22,11 +22,19 @@
     - role: ansible-role-nginx-config
       nginx_config_selinux: true
       nginx_config_debug_output: true
+      # nginx_config_upload_enable: true
+      # nginx_config_upload:
+      #   - src: ../common/files/snippets/location_snippet.conf
+      #     dest: /etc/nginx/snippets
+      #     backup: true
+      #   - src: ../common/files/http/
+      #     dest: /etc/nginx/conf.d
+      #     backup: true      
       nginx_config_http_template_enable: true
       nginx_config_http_template:
-        - template_file: http/default.conf.j2
+        - template_file: ../templates/nginx/logscale.conf.j2
           deployment_location: /etc/nginx/conf.d/logscale.conf
-          config:
+          # config:
             cache_path:
               - path: /var/cache/nginx/proxy/logscale
                 levels: "1:1"
