--- a/playbooks/deploy-lb.yaml
+++ b/playbooks/deploy-lb.yaml
@@ -21,7 +21,7 @@
           - postrotate
     - role: ansible-role-nginx-config
       nginx_config_selinux: true
-      nginx_config_debug_output: true
+      nginx_config_debug_output: false
       # nginx_config_upload_enable: true
       # nginx_config_upload:
       #   - src: ../common/files/snippets/location_snippet.conf
@@ -30,10 +30,7 @@
       #   - src: ../common/files/http/
       #     dest: /etc/nginx/conf.d
       #     backup: true      
-      nginx_config_http_template_enable: true
-      nginx_config_http_template:
-        - template_file: ../templates/nginx/logscale.conf.j2
-          deployment_location: /etc/nginx/conf.d/logscale.conf
+      nginx_config_http_template_enable: false
           # config:
             cache_path:
               - path: /var/cache/nginx/proxy/logscale
